ammended the loader transparency

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div>
 </div>
 
-<body onload="loaderPage()">
+<body>
     <div id="loader">
         <div class="lds-ring">
             <div></div>
@@ -45,24 +45,24 @@
                 <div class="infoSide">
                     <div class="legends">
                         <p class="casesTr">Total Samples Tested:</p><span class="samplesT"
-                            id="totalSamplesTested"></span>
+                            id="totalSamplesTested">0</span>
                     </div>
                     <hr color="#a0522d">
                     <div class="legends">
                         <p class="casesTr">Total Confirmed Cases:</p><span class="casesT"
-                            id="totalConfirmedCase"></span>
+                            id="totalConfirmedCase">0</span>
                     </div>
                     <hr color="#999900">
                     <div class="legend"> <span class="color"></span>
                         <p class="description blue">Active Cases:</p><span class="total blue"
-                            id="totalActiveCases"></span>
+                            id="totalActiveCases">0</span>
                     </div>
                     <div class="legend"> <span class="color green"></span>
                         <p class="description greeen">Discharged: </p><span class="total greeen"
-                            id="discharged"><span></span></span>
+                            id="discharged">0<span></span></span>
                     </div>
                     <div class="legend"> <span class="color red"></span>
-                        <p class="dDescription">Death: </p><span class="dTotal" id="totalDeath"></span>
+                        <p class="dDescription">Death: </p><span class="dTotal" id="totalDeath">0</span>
                     </div>
                 </div>
                 <div class="combinedArea">
