--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             id="discharged">0<span></span></span>
                     </div>
                     <div class="legend"> <span class="color red"></span>
-                        <p class="dDescription">Death: </p><span class="dTotal" id="totalDeath">0</span>
+                        <p class="dDescription">Deaths: </p><span class="dTotal" id="totalDeath">0</span>
                     </div>
                 </div>
                 <div class="combinedArea">
